--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8"/>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <link rel="icon" type="image/x-icon" href="static/images/favicon/find_my_face_favicon.ico"/>
-        <link rel="stylesheet" href="static/styles/markup.css"/>
-        <link rel="stylesheet" href="static/styles/picture.css"/>
+        <link rel="icon" type="image/x-icon" href="../static/images/favicon/find_my_face_favicon.ico"/>
+        <link rel="stylesheet" href="../static/styles/markup.css"/>
+        <link rel="stylesheet" href="../static/styles/picture.css"/>
         <title>Find my face</title>
     </head>
 
@@ -22,7 +22,7 @@
           </nav>
 
             <div id="header_logo">
-                <img src="images/web_pictures/Find_My_Face_logo.png" alt="Find My Face Logo" id="pic_logo">
+                <img src="../static/images/web_pictures/Find_My_Face_logo.png" alt="Find My Face Logo" id="pic_logo">
             </div>
 
             <div id="abt_div">
@@ -91,17 +91,17 @@
 
             <div id="team_info">
               <div class="team_div">
-                <img src="images/authors/Jose_Fabian.jpg" alt="" class="team_pic">
+                <img src="../static/images/authors/Jose_Fabian.jpg" alt="" class="team_pic">
                 <h2>Jose Fabian Rosa</h2>
               </div>
 
               <div class="team_div">
-                <img src="images/authors/Jeff_Martinez.jpeg" alt="" class="team_pic">
+                <img src="../static/images/authors/Jeff_Martinez.jpeg" alt="" class="team_pic">
                 <h2>Jeff Martinez</h2>
               </div>
 
               <div class="team_div">
-                <img src="images/authors/Jared_Beguellin.jpg" alt="" class="team_pic">
+                <img src="../static/images/authors/Jared_Beguellin.jpg" alt="" class="team_pic">
                 <h2>Jared Beguellin</h2>
               </div>
             </div>
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="static/scriptsfile_selection.js"></script>
-        <script type="text/javascript" src="static/scripts/image_preview.js"></script>
+        <script type="text/javascript" src="../static/scripts/file_selection.js"></script>
+        <script type="text/javascript" src="../static/scripts/image_preview.js"></script>
     </body>
 </html>
