Trying to catch the photos

--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="btn-search" id="img_div">
-                <button>Find</button>
+                <button id="btn">Find</button>
             </div>
 
             <div class="img_div">
@@ -50,7 +50,7 @@
                             type="file"
                             id="img_one"
                             accept=".jpg, .png"
-                            name="image_uploads"
+                            name="image_uploads1"
                           />
                         </div>
                         <!--
@@ -77,7 +77,7 @@
                             type="file"
                             id="img_two"
                             accept=".jpg, .png"
-                            name="image_uploads"
+                            name="image_uploads2"
                           />
                         </div>
                         <!--
