--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -113,5 +113,6 @@
 
         <script type="text/javascript" src="../static/scripts/file_selection.js"></script>
         <script type="text/javascript" src="../static/scripts/image_preview.js"></script>
+        <script type="text/javascript" src="../static/scripts/find_face.js"></script>
     </body>
 </html>
