--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -52,6 +52,8 @@
                             accept=".jpg, .png"
                             name="image_uploads1"
                           />
+
+                          <input type="submit" name="submit"/>
                         </div>
                         <!--
                         <div class="preview">
