--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -29,7 +29,7 @@
               <h1>About</h1>
             </div>
 
-            <form method="POST">
+            <form>
               <div class="btn-search" id="img_div">
                   <button type="submit" name="Find" id="btn">Find</button>
               </div>
