--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -31,7 +31,7 @@
 
             <form>
               <div class="btn-search" id="img_div">
-                  <button type="submit" name="Find" id="btn">Find</button>
+                  <button id="btn">Find</button>
               </div>
             </form>
             
