--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -88,6 +88,10 @@
                     </form>
                 </div>
             </div>
+            
+            <div id="upload">
+
+            </div>
 
             <div id="team_info">
               <div class="team_div">
