--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -40,7 +40,7 @@
                         <span class="preview_text_one">Image Preview</span>
                     </div>
 
-                    <form method="POST" enctype="multipart/form-data">
+                    <form action="http://localhost:5000/upload" method="POST" enctype="multipart/form-data">
                         <div class="files">
                           <label for="img_one">
                             Choose image to upload (PNG or JPG)
@@ -88,7 +88,7 @@
                     </form>
                 </div>
             </div>
-            
+
             <div id="upload">
 
             </div>
