--- a/api/v1/static/styles/markup.css
+++ b/api/v1/static/styles/markup.css
@@ -19,7 +19,7 @@ nav {
 #nav_list {
     position: absolute;
     top: 30%;
-    left: 30%;
+    left: 35%;
     width: 600px;
 }
 
@@ -78,7 +78,7 @@ nav ul {
     width: 100%;
     height: 850px;
     margin: 0;
-    padding: 10px;
+    padding-top: 10px;
     text-align: center;
     /*background-color: rgba(240, 243, 232, 0.6);*/
 }
