Testing with two images

--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -36,7 +36,7 @@
             <div class="img_div">
                 <div class="img-container">
                     <div class="img-preview" id="img_one_preview">
-                        <img src="" alt="Image Preview" class="preview_image_one" id="test_uno"/>
+                        <img src="" alt="Image Preview" class="preview_image_one" id="imagen_uno"/>
                         <span class="preview_text_one">Image Preview</span>
                     </div>
 
@@ -63,7 +63,7 @@
 
                 <div class="img-container">
                     <div class="img-preview" id="img_two_preview">
-                        <img src="" alt="Image Preview" class="preview_image_two"/>
+                        <img src="" alt="Image Preview" class="preview_image_two" id="imagen_dos"/>
                         <span class="preview_text_two">Image Preview</span>
                     </div>
 
