prompt the image

--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -110,6 +110,10 @@
               </div>
             </div>
 
+            <div id="response">
+              
+            </div>
+
             <div id="footer">
 
             </div>
