--- a/api/v1/static/styles/picture.css
+++ b/api/v1/static/styles/picture.css
@@ -32,8 +32,8 @@
 
 .preview_image_one, .preview_image_two {
     display: none;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 form {
