--- a/api/v1/static/styles/picture.css
+++ b/api/v1/static/styles/picture.css
@@ -40,6 +40,9 @@
     margin: 0 auto;
     width: 500px;
     height: 450px;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
 }
 
 form {
