--- a/api/v1/static/styles/picture.css
+++ b/api/v1/static/styles/picture.css
@@ -40,7 +40,11 @@
     width: 1000px;
     height: 800px;
     border: 2px solid black;
-    margin: 0 auto;
+    margin-top: 70px;
+    margin-left: 20px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
     display: flex;
     align-items: center;
     justify-content: center;
