--- a/api/v1/static/styles/picture.css
+++ b/api/v1/static/styles/picture.css
@@ -30,7 +30,7 @@
     color: #cccccc;
 }
 
-.preview_image_one, .preview_image_two, .resp_image {
+.preview_image_one, .preview_image_two {
     display: none;
     max-width: 100%;
     max-height: 100%;
@@ -39,7 +39,7 @@
 #response {
     width: 1000px;
     height: 800px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin-top: 70px;
     margin-left: 20px;
     position: relative;
@@ -48,6 +48,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.resp_image {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 form {
