--- a/api/v1/static/styles/markup.css
+++ b/api/v1/static/styles/markup.css
@@ -81,10 +81,11 @@ nav ul {
     padding-top: 10px;
     text-align: center;
     /*background-color: rgba(240, 243, 232, 0.6);*/
+    border: 1px solid black;
 }
 
 h1 {
-    margin: 0;
+    margin: 30px;
 }
 
 .btn-search button {
@@ -101,13 +102,14 @@ h1 {
 }
 
 #team_info {
-    margin-top: 100px;
-    width: 100%;
+    margin-top: 50px;
+    /* width: 100%; */
     height: 600px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     /*background-color: rgba(240, 243, 232, 0.6);*/
+    border: 1px solid black;
 }
 
 .team_div {
