--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -40,7 +40,7 @@
                         <span class="preview_text_one">Image Preview</span>
                     </div>
 
-                    <form action="http://localhost:5000/upload" method="POST" enctype="multipart/form-data">
+                    <form enctype="multipart/form-data">
                         <div class="files">
                           <label for="img_one">
                             Choose image to upload (PNG or JPG)
@@ -67,7 +67,7 @@
                         <span class="preview_text_two">Image Preview</span>
                     </div>
 
-                    <form method="POST" enctype="multipart/form-data">
+                    <form enctype="multipart/form-data">
                         <div class="files">
                           <label for="img_two">
                             Choose image to upload (PNG or JPG)
