Some css for beaty the landing page

--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -12,17 +12,25 @@
     <body>
         <div class="container">
           <nav id="nav_one">
+            <div id="img_header">
+              <img src="../static/images/web_pictures/Find_My_Face_logo.png" alt="">
+            </div>
+
             <div id="nav_list">
               <ul>
                 <li><a href="#abt_div">About</a></li>
-                <li><a href="#img_div">How to</a></li>
-                <li><a href="#team_info">Team</a></li>
+                <li><a href="#img_div">How To</a></li>
+                <li><a href="">Get Started</a></li>
+                <li><a href="#team_info">Our Team</a></li>
               </ul>
             </div>
           </nav>
 
-            <div id="header_logo">
-                <img src="../static/images/web_pictures/Find_My_Face_logo.png" alt="Find My Face Logo" id="pic_logo">
+            <div id="sub_container">
+              <div id="sub_text">
+                <h2>Subtitulo "FACES EVERYWHERE"</h2>
+              </div>
+              <div id="sub_img"></div>
             </div>
 
             <div id="abt_div">
