--- a/api/v1/static/styles/markup.css
+++ b/api/v1/static/styles/markup.css
@@ -5,21 +5,36 @@ html, body {
 }
 
 .container {
-    background-color: rgba(240, 243, 232, 0.6);
+    /* background-color: rgba(240, 243, 232, 0.6); */
+    background-image: radial-gradient(rgb(178, 178, 180), rgb(74, 65, 155));
     position: relative;
 }
 
 nav {
     position: relative;
     width: 100%;
-    height: 150px;
+    height: 100px;
     background-color: rgb(0, 153, 153);
+    background-image: linear-gradient(to right, rgb(180, 248, 248),rgb(0, 153, 153));
+}
+
+#img_header {
+    position: absolute;
+    left: 55px;
+    top: 10px;
+    width: 200px;
+}
+
+#img_header img {
+    width: 200px;
+    border-radius: 10px;
 }
 
 #nav_list {
     position: absolute;
-    top: 30%;
-    left: 35%;
+    top: 20px;
+    right: 25px;
+    /* left: 35%; */
     width: 600px;
 }
 
@@ -32,8 +47,9 @@ ul {
 
 }
 
+
 li a {
-    font-size: 30px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-decoration: none;
@@ -43,6 +59,7 @@ li a {
 
 li a:hover {
     background: rgb(0, 110, 110);
+    border-radius: 5px;
 }
 
 /*
@@ -63,19 +80,29 @@ nav ul {
 }
 */
 
-#header_logo {
+#sub_container {
     position: relative;
     width: 100%;
     height: 820px;
+    display: flex;
+    flex-direction: row;
 }
 
-#pic_logo {
-    width: 100%;
-    height: 820px;
+#sub_text {
+/*     position: absolute; */
+    width: 600px;
+    height: 600px;
+    border: 1px solid black;
+}
+
+#sub_img {
+    width: 600px;
+    height: 600px;
+    border: 1px solid black; 
 }
 
 #abt_div {
-    width: 100%;
+    /* width: 100%; */
     height: 850px;
     margin: 0;
     padding-top: 10px;
@@ -130,4 +157,5 @@ h2 {
     width: 100;
     height: 75px;
     background-color: rgb(0, 153, 153);
+    background-image: linear-gradient(to right, rgb(180, 248, 248),rgb(0, 153, 153));
 }
