--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -30,7 +30,10 @@
               <div id="sub_text">
                 <h2>Subtitulo "FACES EVERYWHERE"</h2>
               </div>
-              <div id="sub_img"></div>
+
+              <div id="sub_img">
+                <img src="../static/images/web_pictures/Subtitle image.png" alt="">
+              </div>
             </div>
 
             <div id="abt_div">
