--- a/api/v1/static/styles/markup.css
+++ b/api/v1/static/styles/markup.css
@@ -101,6 +101,11 @@ nav ul {
     border: 1px solid black; 
 }
 
+#sub_img img {
+    max-width: 100%;
+    border-radius: 50px;
+}
+
 #abt_div {
     /* width: 100%; */
     height: 850px;
