--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -27,12 +27,14 @@
           </nav>
 
             <div id="sub_container">
-              <div id="sub_text">
-                <h2>Subtitulo "FACES EVERYWHERE"</h2>
-              </div>
-
-              <div id="sub_img">
-                <img src="../static/images/web_pictures/Subtitle image.png" alt="">
+              <div id="sub_cont">
+                <div id="sub_text">
+                  <h2>Subtitulo "FACES EVERYWHERE"</h2>
+                </div>
+  
+                <div id="sub_img">
+                  <img src="../static/images/web_pictures/Subtitle image.png" alt="">
+                </div>
               </div>
             </div>
 
