--- a/api/v1/static/styles/markup.css
+++ b/api/v1/static/styles/markup.css
@@ -85,7 +85,17 @@ nav ul {
     width: 100%;
     height: 820px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#sub_cont {
+    width: 1300px;
+    height: 600px;
+    border: 1px solid black;
+    display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 #sub_text {
