--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" type="image/x-icon" href="../static/images/favicon/find_my_face_favicon.ico"/>
         <link rel="stylesheet" href="../static/styles/markup.css"/>
         <link rel="stylesheet" href="../static/styles/picture.css"/>
+        <link rel="stylesheet" href="../static/styles/button.css">
         <title>Find my face</title>
     </head>
 
@@ -13,7 +14,9 @@
         <div class="container">
           <nav id="nav_one">
             <div id="img_header">
-              <img src="../static/images/web_pictures/Find_My_Face_logo.png" alt="">
+              <a href="">
+                <img src="../static/images/web_pictures/Find_My_Face_logo.png" alt="">
+              </a>
             </div>
 
             <div id="nav_list">
@@ -29,7 +32,10 @@
             <div id="sub_container">
               <div id="sub_cont">
                 <div id="sub_text">
-                  <h2>Subtitulo "FACES EVERYWHERE"</h2>
+                  <h2>FACES
+                    <br>
+                    EVERYWHERE</h2>
+                    <h4>Find that face in your images</h4>
                 </div>
   
                 <div id="sub_img">
