--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <div id="response">
+            <div class= "response_class">
 
             </div>
 
