--- a/api/v1/static/styles/markup.css
+++ b/api/v1/static/styles/markup.css
@@ -137,29 +137,46 @@ nav ul {
     border-radius: 50px;
 }
 
-#abt_div {
+#abt_container {
     /* width: 100%; */
     height: 850px;
     margin: 0;
     padding-top: 10px;
-    text-align: center;
+    /* text-align: center; */
     /*background-color: rgba(240, 243, 232, 0.6);*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border: 1px solid black;
+}
+
+#abt_div {
+    border: 1px solid black;
+    width: 700px;
+    height: 600px;
+/*     display: flex;
+    justify-content: center; */
 }
 
 h1 {
     margin: 30px;
 }
 
+.btn-search {
+    display: flex;
+    justify-content: center;
+
+}
+
 .btn-search button {
     margin: 30px;
     border: black;
-    width: 200px;
-    height: 75px;
-    position: relative;
-    left: 25%;
+    width: 300px;
+    height: 100px;
+    /* position: relative;
+    left: 45%; */
     color: white;
-    background-color: #a0522d;
+    background-color: #adc4e9;
     font-size: x-large;
     font-weight: bold;
 }
@@ -183,15 +200,27 @@ h1 {
     padding-top: 150px;
     max-width: 100%;
     height: 250px;
+    border-radius: 100px;
 }
 
 .team_div h2 {
-    font-family: "Gill Sans", sans-serif;
-    font-weight: normal;
+    margin: 0;
+    color: #bbbbbb;
+    font-family: "Times New Roman", Times, serif;
+    font-weight: bold;
+    font-size: 50px;
 }
+
+.team_det {
+    color: white;
+    margin: 5px;
+}
+
+
 #footer {
     width: 100;
     height: 75px;
     background-color: rgb(0, 153, 153);
     background-image: linear-gradient(to right, rgb(180, 248, 248),rgb(0, 153, 153));
 }
+
