--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -44,12 +44,10 @@
               </div>
             </div>
 
-            <div id="abt_div">
+            <div id="abt_container">
               <h1>About</h1>
-            </div>
-
-            <div class="btn-search" id="img_div">
-                <button id="btn">Find</button>
+              <div id="abt_div">
+              </div>
             </div>
             
             <div class="img_div">
@@ -108,6 +106,10 @@
                 </div>
             </div>
 
+            <div class="btn-search">
+              <button id="btn">Find</button>
+            </div>
+
             <div class= "response_class">
 
             </div>
@@ -116,16 +118,38 @@
               <div class="team_div">
                 <img src="../static/images/authors/Jose_Fabian.jpg" alt="" class="team_pic">
                 <h2>Jose Fabian Rosa</h2>
+                <p class="team_det">Musician - Percusionist
+                  <br>
+                  Band Leader, 5 Cats Steel Band
+                  <br>
+                  Holberton Student - C13
+                </p>
               </div>
 
               <div class="team_div">
                 <img src="../static/images/authors/Jeff_Martinez.jpeg" alt="" class="team_pic">
                 <h2>Jeff Martinez</h2>
+                <p class="team_det">Hospitality Industry
+                  <br>
+                  Performings Arts
+                  <br>
+                  Sports and Yoga
+                  <br>
+                  Holberton Student - C13
+                </p>
               </div>
 
               <div class="team_div">
                 <img src="../static/images/authors/Jared_Beguellin.jpg" alt="" class="team_pic">
                 <h2>Jared Beguellin</h2>
+                <p class="team_det">Maintenance/Construction
+                  <br>
+                  CU Boulder Computer Science
+                  <br>
+                  Software Engineer In-Training, Genesis Bitcoin ATM
+                  <br>
+                  Holberton Student - C13
+                </p>
               </div>
             </div>
 
