--- a/api/v1/static/styles/button.css
+++ b/api/v1/static/styles/button.css
@@ -29,11 +29,11 @@ button {
 }
 button#btn {
   font-weight: 600;
-  color: #382b22;
+  color: #242a63;
   text-transform: uppercase;
   padding: 1.25em 2em;
-  background: #b4f8f8;
-  border: 2px solid #114747;
+  /* background: $light-pink; */
+  /* border: 2px solid $pink-border; */
   border-radius: 0.75em;
   transform-style: preserve-3d;
   transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
@@ -47,14 +47,14 @@ button#btn::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #009999;
+  background: #173463;
   border-radius: inherit;
   /*  box-shadow: 0 0 0 2px $pink-border, 0 0.625em 0 0 $pink-shadow; */
   transform: translate3d(0, 0.75em, -1em);
   transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
 }
 button#btn:hover {
-  background: #08dada;
+  background: #6389c7;
   transform: translate(0, 0.25em);
 }
 button#btn:hover::before {
@@ -62,7 +62,7 @@ button#btn:hover::before {
   transform: translate3d(0, 0.5em, -1em);
 }
 button#btn:active {
-  background: #08dada;
+  background: #6389c7;
   transform: translate(0em, 0.75em);
 }
 button#btn:active::before {
