--- a/api/v1/static/styles/button.scss
+++ b/api/v1/static/styles/button.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');
 
 $bg: #fff;
-$text: #382b22;
+$text: #242a63;
 $light-pink: rgb(180, 248, 248);
 $pink: rgb(8, 218, 218);
 $dark-pink: rgb(0, 153, 153);
@@ -42,8 +42,8 @@ button {
     color: $text;
     text-transform: uppercase;
     padding: 1.25em 2em;
-    background: $light-pink;
-    border: 2px solid $pink-border;
+    /* background: $light-pink; */
+    /* border: 2px solid $pink-border; */
     border-radius: 0.75em;
     transform-style: preserve-3d;
     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
@@ -56,14 +56,14 @@ button {
       left: 0;
       right: 0;
       bottom: 0;
-      background: $dark-pink;
+      background: #173463;
       border-radius: inherit;
      /*  box-shadow: 0 0 0 2px $pink-border, 0 0.625em 0 0 $pink-shadow; */
       transform: translate3d(0, 0.75em, -1em);
       transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
     }
     &:hover {
-      background: $pink;
+      background: #6389c7;
       transform: translate(0, 0.25em);
       &::before {
         /* box-shadow: 0 0 0 2px $pink-border, 0 0.5em 0 0 $pink-shadow; */
@@ -71,7 +71,7 @@ button {
       }
     }
     &:active {
-      background: $pink;
+      background: #6389c7;
       transform: translate(0em, 0.75em);
       &::before {
         box-shadow: 0 0 0 2px $pink-border, 0 0 $pink-shadow;
