--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -21,8 +21,8 @@
 
             <div id="nav_list">
               <ul>
-                <li><a href="#abt_div">About</a></li>
-                <li><a href="#img_div">How To</a></li>
+                <li><a href="#abt_container">About</a></li>
+                <li><a href="#how_to">How To</a></li>
                 <li><a href="">Get Started</a></li>
                 <li><a href="#team_info">Our Team</a></li>
               </ul>
@@ -50,7 +50,7 @@
               </div>
             </div>
             
-            <div class="img_div">
+            <div class="img_div" id="how_to">
                 <div class="img-container">
                     <div class="img-preview" id="img_one_preview">
                         <img src="" alt="Image Preview" class="preview_image_one" id="imagen_uno"/>
