--- a/api/v1/static/styles/markup.css
+++ b/api/v1/static/styles/markup.css
@@ -137,43 +137,72 @@ nav ul {
     border-radius: 50px;
 }
 
+.divisors {
+    margin: 0;
+    height: 75px;
+    background-image: linear-gradient(to right, rgb(180, 248, 248),rgb(0, 153, 153));
+}
+
 #abt_container {
     /* width: 100%; */
-    height: 850px;
+    height: 920px;
     margin: 0;
     padding-top: 10px;
     /* text-align: center; */
     /*background-color: rgba(240, 243, 232, 0.6);*/
     display: flex;
     flex-direction: column;
-    justify-content: center;
+/*     justify-content: center; */
+    align-items: center;
     border: 1px solid black;
 }
 
+h1 {
+    margin: 20px;
+    color: #2D3646;
+    font-size: 70px;  
+    font-weight: bold;
+    font-family: "Times New Roman", Times, serif;
+}
+
 #abt_div {
-    border: 1px solid black;
-    width: 700px;
+    /* border: 1px solid black; */
+    margin-top: 50px;
+    width: 950px;
     height: 600px;
 /*     display: flex;
     justify-content: center; */
 }
 
-h1 {
-    margin: 30px;
+#abt_info {
+    margin: 0;
+    padding: 0;
+    color: #424242;
+    font-size: 35px;
+    font-family: "Times New Roman", Times, serif;
+    text-align: center;
+}
+
+#how_to {
+    height: 920px;
+    margin: 0;
+    border: 1px solid black;
 }
 
 .btn-search {
+    margin: 20px;
+    padding: 0;
+    width: 300px;
     display: flex;
     justify-content: center;
-
 }
 
 .btn-search button {
-    margin: 30px;
+    margin: 0;
     border: black;
     width: 300px;
-    height: 100px;
-    /* position: relative;
+/*     height: 100px; */
+/*     position: relative;
     left: 45%; */
     color: white;
     background-color: #adc4e9;
@@ -182,7 +211,7 @@ h1 {
 }
 
 #team_info {
-    margin-top: 50px;
+  /*   margin-top: 50px; */
     /* width: 100%; */
     height: 600px;
     display: flex;
@@ -197,7 +226,7 @@ h1 {
 }
 
 .team_pic {
-    padding-top: 150px;
+    padding-top: 100px;
     max-width: 100%;
     height: 250px;
     border-radius: 100px;
@@ -205,14 +234,14 @@ h1 {
 
 .team_div h2 {
     margin: 0;
-    color: #bbbbbb;
+    color: #2D3646;
     font-family: "Times New Roman", Times, serif;
     font-weight: bold;
     font-size: 50px;
 }
 
 .team_det {
-    color: white;
+    color: #bbbbbb;
     margin: 5px;
 }
 
