--- a/api/v1/static/styles/picture.css
+++ b/api/v1/static/styles/picture.css
@@ -1,12 +1,23 @@
+#img_div_container {
+    margin: 0;
+    padding: 0;
+    height: 920px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+}
+
 .img_div {
     width: 1000px;
-    /* height: 750px; */
-    position: relative;
+    height: 550px;
+   /*  position: relative;
     top: 50%;
-    left: 50%;
-    margin: 20px;
+    left: 50%; */
+/*     margin: 20px; */
     padding: 20px;
-    transform: translate(-50%, 0);
+    /* transform: translate(-50%, 0); */
     display: flex;
     flex-direction: row;
     border: 1px solid black;
