--- a/api/v1/templates/index.html
+++ b/api/v1/templates/index.html
@@ -23,7 +23,7 @@
               <ul>
                 <li><a href="#abt_container">About</a></li>
                 <li><a href="#how_to">How To</a></li>
-                <li><a href="">Get Started</a></li>
+                <li><a href="#img_div_container">Get Started</a></li>
                 <li><a href="#team_info">Our Team</a></li>
               </ul>
             </div>
@@ -64,6 +64,11 @@
             <div class="divisors"></div>
             
             <div id="img_div_container">
+              <div id="img_desc">
+                <p id="p_uno">Face want detected</p>
+                <p id="p_dos">Group image</p>
+              </div>
+
               <div class="img_div">
                   <div class="img-container">
                       <div class="img-preview" id="img_one_preview">
