--- a/api/v1/static/styles/picture.css
+++ b/api/v1/static/styles/picture.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+   /*  border: 1px solid black; */
 }
 
 #img_desc {
@@ -78,7 +78,7 @@
 #response {
     width: 1000px;
     height: 800px;
-    border: 2px solid black;
+   /*  border: 2px solid black; */
     margin-top: 70px;
     margin-left: 20px;
     position: relative;
